TDP-4625: fix long label overflow

--- a/dataprep-webapp/src/app/components/datagrid/_datagrid.scss
+++ b/dataprep-webapp/src/app/components/datagrid/_datagrid.scss
@@ -304,6 +304,11 @@ $datagrid-column-preview-cells-background: #FCFFDE;
 					}
 				}
 			}
+
+            &:last-child .checkboxContainer {
+                right: 0;
+                left: auto;
+            }
 		}
 
 		.highlight {
@@ -336,6 +341,7 @@ $datagrid-column-preview-cells-background: #FCFFDE;
 			background-color: #e9e9e9;
 			border: 1px dotted #BABABA;
 		}
+
 	}
 
 	.talend-dropdown-div {
